--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Final Link Dashboard - Fixed Edit Mode</title>
+  <title>Link Dashboard - Fixed Removal</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
@@ -113,7 +113,7 @@
 
     @media screen and (max-width: 600px) {
       .link-box { width: 30%; height: 150px; }
-      .link-box i { font-size: 40px; }
+      .link-box i { font-size: 50px; }
       .link-label { font-size: 20px; }
     }
 
@@ -223,21 +223,24 @@ function renderLinks(){
     const grid = section.querySelector(".link-grid");
 
     links.filter(l=>l.category===cat).forEach((link)=>{
+      const currentLink = link; // FIX: capture current link
       const a=document.createElement("a");
-      a.href=link.url; a.target="_blank"; a.className="link-box "+link.category;
-      a.dataset.id = link.id;
-      a.innerHTML=`<i class="${link.icon||'fa-solid fa-link'}"></i>
-                   <span class="link-label">${link.name}</span>
+      a.href=currentLink.url;
+      a.target="_blank";
+      a.className="link-box "+currentLink.category;
+      a.dataset.id = currentLink.id;
+      a.innerHTML=`<i class="${currentLink.icon||'fa-solid fa-link'}"></i>
+                   <span class="link-label">${currentLink.name}</span>
                    <div class="edit-buttons">
                      <button class="editBtn">✏️</button>
                      <button class="removeBtn">🗑️</button>
                    </div>`;
       if(editMode) a.classList.add("edit-mode");
 
-      // Edit
+      // EDIT button
       a.querySelector(".editBtn")?.addEventListener("click", function(e){
         e.stopPropagation(); e.preventDefault();
-        const linkIndex = links.findIndex(l=>l.id===link.id);
+        const linkIndex = links.findIndex(l=>l.id===currentLink.id);
         if(linkIndex === -1) return;
         const l = links[linkIndex];
         const newName = prompt("Edit Name:", l.name) || l.name;
@@ -248,10 +251,10 @@ function renderLinks(){
         saveLinks(); renderLinks();
       });
 
-      // Remove
+      // REMOVE button
       a.querySelector(".removeBtn")?.addEventListener("click", function(e){
         e.stopPropagation(); e.preventDefault();
-        const linkIndex = links.findIndex(l=>l.id===link.id);
+        const linkIndex = links.findIndex(l=>l.id===currentLink.id);
         if(linkIndex === -1) return;
         if(confirm(`Remove "${links[linkIndex].name}"?`)){
           links.splice(linkIndex,1); saveLinks(); renderLinks();
